--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My personal web app to control my house tasks",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,13 @@
   },
   "homepage": "https://github.com/igorFaustino/myHouseTasks#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
-    "ejs": "^2.5.6",
+    "cors": "^2.8.3",
     "express": "^4.15.3",
-    "mongojs": "^2.4.0"
+    "jsonwebtoken": "^7.4.1",
+    "mongoose": "^4.11.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1"
   }
 }
